[gd_scene load_steps=5 format=3 uid="uid://dd5wgow87o0tk"]

[ext_resource type="Script" path="res://test/scenes/dialog_testing_Ezra_plugin/Dialog_test_scene.gd" id="1_pgp7p"]
[ext_resource type="JSON" path="res://test/scenes/dialog_testing_Ezra_plugin/dialog.json" id="2_b8v6q"]
[ext_resource type="Script" path="res://test/scenes/dialog_testing_Ezra_plugin/DialogBox.gd" id="3_udvni"]
[ext_resource type="Script" path="res://addons/ez_dialogue/ez_dialogue_node.gd" id="4_5l63b"]

[node name="Dialog_test_scene" type="Node2D"]
script = ExtResource("1_pgp7p")
dialog_json = ExtResource("2_b8v6q")

[node name="DialogBox" type="Node2D" parent="."]
script = ExtResource("3_udvni")

[node name="VBoxContainer" type="VBoxContainer" parent="DialogBox"]
offset_left = 278.0
offset_top = 346.0
offset_right = 318.0
offset_bottom = 386.0

[node name="Label" type="Label" parent="DialogBox/VBoxContainer"]
layout_mode = 2
text = "dialogo foda"

[node name="EzDialogue" type="Node" parent="."]
script = ExtResource("4_5l63b")

[connection signal="custom_signal_received" from="EzDialogue" to="." method="_on_ez_dialogue_custom_signal_received"]
[connection signal="dialogue_generated" from="EzDialogue" to="." method="_on_ez_dialogue_dialogue_generated"]
[connection signal="end_of_dialogue_reached" from="EzDialogue" to="." method="_on_ez_dialogue_end_of_dialogue_reached"]
